--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Title -->
     <h1>UNSPLASH API - INFINITE SCROLL</h1>
+    <div class="loader" id="loader" >
+        <img src="loader.svg" alt="Loading" />
+    </div>
+    <!-- image container -->
+    <div class="image-container" id="image-container">
+    </div>
     <!-- Script -->
     <script src="script.js"></script>
 </body>
